2018-04-19 18:45 +0000  Asterisk Development Team <asteriskteam@digium.com>

	* asterisk 15.4.0-rc1 Released.

2018-04-19 13:34 +0000 [fb193a12b0]  Chris Savinovich <csavinovich@digium.com>

	* Update for 15.4.0-rc1

2018-04-04 13:12 +0000 [5c2120f5f5]  Joshua Colp <jcolp@digium.com>

	* bridge_softmix / app_confbridge: Add support for REMB combining.

	  This change adds the ability for multiple REMB reports in
	  bridge_softmix to be combined according to a configured
	  behavior into a single report. This single report is sent
	  back to the sender of video, which adjusts the encoding bitrate
	  to be at or below the bitrate of the report. The available
	  behaviors are: lowest, highest, and average. Lowest uses the
	  lowest received bitrate. Highest uses the highest received
	  bitrate. Average goes through the received bitrates adding
	  them to the previous average and creates a new average.

	  Other behaviors can be added in the future and the existing
	  average one may be adjusted, but this provides the foundation
	  to do so.

	  Support for configuring which behavior to use has been
	  added to app_confbridge.

	  ASTERISK-27804

	  Change-Id: I9eafe4e7c1f72d67074a8d6acb26bfcf19322b66

2018-04-17 07:13 +0000 [0d9f42eb8e]  Alexander Traud <pabstraud@compuserve.com>

	* utils/pval: Add -lBlocksRuntime for compiler clang conditionally.

	  ASTERISK-27809

	  Change-Id: I930b364a33d54cc08dedfcd5bb45f7e83242f134

2018-04-09 17:09 +0000 [8eb0622971]  Ben Ford <bford@digium.com>

	* res_rtp_asterisk: Add support for receiving and handling NACK requests.

	  Adds the ability to receive and handle incoming NACK requests if
	  retransmissions are enabled. If retransmissions are enabled, a data
	  buffer is allocated that stores packets being sent. If a NACK request
	  is received, the packet requested for retransmission is sent if it is
	  still in the buffer. In the same request, if any of the following 16