@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-15.4.0-rc1</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-15.4.0-rc1</h3><h3 align="center">Date: 2018-04-19</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><title>Release Summary - asterisk-15.4.0</title><h1 align="center"><a name="top">Release Summary</a></h1><h3 align="center">asterisk-15.4.0</h3><h3 align="center">Date: 2018-05-01</h3><h3 align="center">&lt;asteriskteam@digium.com&gt;</h3><hr><h2 align="center">Table of Contents</h2><ol>
 <li><a href="#summary">Summary</a></li>
 <li><a href="#contributors">Contributors</a></li>
 <li><a href="#closed_issues">Closed Issues</a></li>
@@ -7,7 +7,7 @@
 <li><a href="#diffstat">Diffstat</a></li>
 </ol><hr><a name="summary"><h2 align="center">Summary</h2></a><center><a href="#top">[Back to Top]</a></center><p>This release is a point release of an existing major version. The changes included were made to address problems that have been identified in this release series, or are minor, backwards compatible new features or improvements. Users should be able to safely upgrade to this version if this release series is already in use. Users considering upgrading from a previous version are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p><p>The data in this summary reflects changes that have been made since the previous release, asterisk-15.3.0.</p><hr><a name="contributors"><h2 align="center">Contributors</h2></a><center><a href="#top">[Back to Top]</a></center><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release. For coders, the number is how many of their patches (of any size) were committed into this release. For testers, the number is the number of times their name was listed as assisting with testing a patch. Finally, for reporters, the number is the number of issues that they reported that were affected by commits that went into this release.</p><table width="100%" border="0">
 <tr><th width="33%">Coders</th><th width="33%">Testers</th><th width="33%">Reporters</th></tr>
-<tr valign="top"><td width="33%">38 Alexander Traud <pabstraud@compuserve.com><br/>27 Corey Farrell <git@cfware.com><br/>14 Richard Mudgett <rmudgett@digium.com><br/>9 George Joseph <gjoseph@digium.com><br/>8 Joshua Colp <jcolp@digium.com><br/>5 Benjamin Keith Ford <bford@digium.com><br/>3 Ross Beer <ross.beer@voicehost.co.uk><br/>2 Chris Savinovich <csavinovich@digium.com><br/>1 Michael Cargile <mikec@vicidial.com><br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Nathan Bruning <nathan@iperity.com><br/>1 Ivan Poddubny <ivan.poddubny@gmail.com><br/>1 Sean Bright <sean.bright@gmail.com><br/>1 sungtae kim <pchero21@gmail.com><br/>1 lvl <laszlo@talkto.nl><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 Thomas Guebels <tgu@escaux.com><br/>1 Kevin Harwell <kharwell@digium.com><br/>1 Evandro César Arruda <ecarruda@gmail.com><br/>1 Florian Floimair <f.floimair@commend.com><br/></td><td width="33%"><td width="33%">32 Alexander Traud <pabstraud@compuserve.com><br/>4 Ross Beer <ross.beer@voicehost.co.uk><br/>4 Joshua Colp <jcolp@digium.com><br/>3 John Nemeth <jnemeth@netbsd.org><br/>2 Richard Mudgett <rmudgett@digium.com><br/>2 lvl <laszlo@talkto.nl><br/>1 Michael Cargile <mikec@vicidial.com><br/>1 Sébastien Duthil <sduthil@wazo.community><br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Joerg Sonnenberger, D'Arcy Cain<br/>1 Kevin Harwell <kharwell@digium.com><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 Stephane Chazelas <stephane.chazelas@gmail.com><br/>1 Fran Vicente <franfj@gmail.com><br/>1 Michiel van Baak <michiel@vanbaak.info><br/>1 Curt Sampson <cjs@starling-software.com><br/>1 Corey Farrell <git@cfware.com><br/>1 Nathan Bruning <nathan@iperity.com><br/>1 Shannon Price <sprice@dialogtech.com><br/>1 John M. <xetra_frankfurt@gmx.de><br/>1 Benjamin Keith Ford <bford@digium.com><br/>1 Bryan Walters <secretop@gmail.com><br/>1 clean targets.<br/>1 George Joseph <gjoseph@digium.com><br/>1 Alejandro Padilla <alejandro.padilla83@gmail.com><br/>1 Thomas Guebels <tgu@escaux.com><br/>1 Evandro César Arruda <ecarruda@gmail.com><br/></td></tr>
+<tr valign="top"><td width="33%">38 Alexander Traud <pabstraud@compuserve.com><br/>27 Corey Farrell <git@cfware.com><br/>14 Richard Mudgett <rmudgett@digium.com><br/>9 George Joseph <gjoseph@digium.com><br/>9 Joshua Colp <jcolp@digium.com><br/>5 Benjamin Keith Ford <bford@digium.com><br/>3 Ross Beer <ross.beer@voicehost.co.uk><br/>3 Chris Savinovich <csavinovich@digium.com><br/>1 Michael Cargile <mikec@vicidial.com><br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Nathan Bruning <nathan@iperity.com><br/>1 Ivan Poddubny <ivan.poddubny@gmail.com><br/>1 Sean Bright <sean.bright@gmail.com><br/>1 sungtae kim <pchero21@gmail.com><br/>1 lvl <laszlo@talkto.nl><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 Thomas Guebels <tgu@escaux.com><br/>1 Kevin Harwell <kharwell@digium.com><br/>1 Evandro César Arruda <ecarruda@gmail.com><br/>1 Florian Floimair <f.floimair@commend.com><br/></td><td width="33%"><td width="33%">32 Alexander Traud <pabstraud@compuserve.com><br/>5 Joshua Colp <jcolp@digium.com><br/>4 Ross Beer <ross.beer@voicehost.co.uk><br/>3 John Nemeth <jnemeth@netbsd.org><br/>2 Richard Mudgett <rmudgett@digium.com><br/>2 lvl <laszlo@talkto.nl><br/>1 Michael Cargile <mikec@vicidial.com><br/>1 Sébastien Duthil <sduthil@wazo.community><br/>1 Jean Aunis - Prescom <jean.aunis@prescom.fr><br/>1 Joerg Sonnenberger, D'Arcy Cain<br/>1 Kevin Harwell <kharwell@digium.com><br/>1 Guido Falsi <madpilot@freebsd.org><br/>1 Stephane Chazelas <stephane.chazelas@gmail.com><br/>1 Fran Vicente <franfj@gmail.com><br/>1 Michiel van Baak <michiel@vanbaak.info><br/>1 Curt Sampson <cjs@starling-software.com><br/>1 Corey Farrell <git@cfware.com><br/>1 Nathan Bruning <nathan@iperity.com><br/>1 Shannon Price <sprice@dialogtech.com><br/>1 John M. <xetra_frankfurt@gmx.de><br/>1 Benjamin Keith Ford <bford@digium.com><br/>1 Bryan Walters <secretop@gmail.com><br/>1 clean targets.<br/>1 George Joseph <gjoseph@digium.com><br/>1 Alejandro Padilla <alejandro.padilla83@gmail.com><br/>1 Thomas Guebels <tgu@escaux.com><br/>1 Evandro César Arruda <ecarruda@gmail.com><br/></td></tr>
 </table><hr><a name="closed_issues"><h2 align="center">Closed Issues</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p><h3>New Feature</h3><h4>Category: Resources/res_pjsip</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27704">ASTERISK-27704</a>: Add cache_pools debug option to pjproject.conf<br/>Reported by: Richard Mudgett<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=f6d5bf99f295a4c6e77e41c5bee68bb232827db3">[f6d5bf99f2]</a> Richard Mudgett -- pjproject: Add cache_pools debugging option.</li>
 </ul><br><h3>Bug</h3><h4>Category: Addons/cdr_mysql</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27782">ASTERISK-27782</a>: cdr_mysql: Missing MYSQL_PORT definition<br/>Reported by: Evandro César Arruda<ul>
@@ -15,6 +15,7 @@
 </ul><br><h4>Category: Applications/app_amd</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27610">ASTERISK-27610</a>: app_amd.so returning TOOLONG before reaching the timeout<br/>Reported by: Michael Cargile<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=66da3570fe857cc561d30d9f6fd5e7944e4b3d59">[66da3570fe]</a> Michael Cargile -- apps/app_amd.c: Fixed total time and silence calculations</li>
 </ul><br><h4>Category: Applications/app_confbridge</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27804">ASTERISK-27804</a>: bridge_softmix / app_confbridge: Add support for combining REMB reports<br/>Reported by: Joshua Colp<ul>
+<li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=9f1d4ba8deb6953d8ec599dca20ee9884e6b5068">[9f1d4ba8de]</a> Joshua Colp -- bridge_softmix: Fix some REMB bugs.</li>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=5c2120f5f50b6efe76e52ccd4fd7e4eee4d9d49c">[5c2120f5f5]</a> Joshua Colp -- bridge_softmix / app_confbridge: Add support for REMB combining.</li>
 </ul><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27786">ASTERISK-27786</a>: app_confbridge: Add ability to enable and configure REMB support<br/>Reported by: Joshua Colp<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=132fd2abdb7e73b7a1ba6b6594a7c810b80d3a18">[132fd2abdb]</a> Joshua Colp -- app_confbridge / bridge_softmix: Add ability to configure REMB interval.</li>
@@ -25,6 +26,7 @@
 </ul><br><h4>Category: Applications/app_voicemail/IMAP</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27734">ASTERISK-27734</a>: [patch] BuildSystem: Enable IMAP storage on openSUSE and Arch Linux.<br/>Reported by: Alexander Traud<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=ca579641654d40353548c7da925f44f71d6f5076">[ca57964165]</a> Alexander Traud -- BuildSystem: Enable IMAP storage on openSUSE and Arch Linux.</li>
 </ul><br><h4>Category: Bridges/bridge_softmix</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27804">ASTERISK-27804</a>: bridge_softmix / app_confbridge: Add support for combining REMB reports<br/>Reported by: Joshua Colp<ul>
+<li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=9f1d4ba8deb6953d8ec599dca20ee9884e6b5068">[9f1d4ba8de]</a> Joshua Colp -- bridge_softmix: Fix some REMB bugs.</li>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=5c2120f5f50b6efe76e52ccd4fd7e4eee4d9d49c">[5c2120f5f5]</a> Joshua Colp -- bridge_softmix / app_confbridge: Add support for REMB combining.</li>
 </ul><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27786">ASTERISK-27786</a>: app_confbridge: Add ability to enable and configure REMB support<br/>Reported by: Joshua Colp<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=132fd2abdb7e73b7a1ba6b6594a7c810b80d3a18">[132fd2abdb]</a> Joshua Colp -- app_confbridge / bridge_softmix: Add ability to configure REMB interval.</li>
@@ -158,6 +160,7 @@
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=96cbfc0d45d3ed9c4a96791f863f267630f9928a">[96cbfc0d45]</a> Alexander Traud -- BuildSystem: In NetBSD, the Python Programming Language is python-X.Y.</li>
 </ul><br><hr><a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all changes that went into this release that did not reference a JIRA issue.</p><table width="100%" border="1">
 <tr><th>Revision</th><th>Author</th><th>Summary</th></tr>
+<tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=60f5d0e5c55629e078e56de3dc5222a8aafe062e">60f5d0e5c5</a></td><td>Chris Savinovich</td><td>Update for 15.4.0-rc1</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=fb193a12b0e2b1e7bd04ac94edade393b9db7a96">fb193a12b0</a></td><td>Chris Savinovich</td><td>Update for 15.4.0-rc1</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=00bdee4e62daafdd1d31c09f1a386b7e9bc1e2df">00bdee4e62</a></td><td>George Joseph</td><td>utils:  Add ast_assert_return</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=a7770fabd7247b7ca6de928e75a7214214a98a3b">a7770fabd7</a></td><td>Richard Mudgett</td><td>pjsip_scheduler.c: Add ability to trace scheduled tasks.</td></tr>
@@ -220,7 +223,7 @@ asterisk-15.3.0-summary.txt                                                     
 b/.gitreview                                                                                    |    7
 b/.version                                                                                      |    2
 b/CHANGES                                                                                       |   23
-b/ChangeLog                                                                                     | 1533 ++++++++
+b/ChangeLog                                                                                     | 1537 ++++++++
 b/Makefile                                                                                      |   46
 b/UPGRADE.txt                                                                                   |    8
 b/addons/cdr_mysql.c                                                                            |    8
@@ -234,12 +237,12 @@ b/apps/app_minivm.c                                                             
 b/apps/app_voicemail.c                                                                          |   39
 b/apps/confbridge/conf_config_parser.c                                                          |   77
 b/apps/confbridge/include/confbridge.h                                                          |    4
-b/asterisk-15.4.0-rc1-summary.html                                                              |  386 ++
-b/asterisk-15.4.0-rc1-summary.txt                                                               |  903 ++++
+b/asterisk-15.4.0-rc1-summary.html                                                              |  376 ++
+b/asterisk-15.4.0-rc1-summary.txt                                                               |  900 ++++
 b/autoconf/ast_ext_tool_check.m4                                                                |    2
 b/autoconf/ast_pkgconfig.m4                                                                     |    2
 b/bootstrap.sh                                                                                  |    4
-b/bridges/bridge_softmix.c                                                                      |  290 +
+b/bridges/bridge_softmix.c                                                                      |  298 +
 b/bridges/bridge_softmix/include/bridge_softmix_internal.h                                      |   14
 b/build_tools/cflags.xml                                                                        |    2
 b/build_tools/menuselect-deps.in                                                                |    1
@@ -371,6 +374,7 @@ b/third-party/pjproject/patches/0080-timer-Clean-up-usage-of-timer-heap.patch   
 b/third-party/pjproject/patches/0090-sip_transaction-In-tsx_timer_callback-check-if-tsx-i.patch |   31
 b/third-party/versions.mak                                                                      |    2
 b/utils/.gitignore                                                                              |    1
+b/utils/Makefile                                                                                |    3
 third-party/pjproject/patches/0070-sdp_media_fmt.patch                                          |   19
 third-party/pjproject/patches/0071-sdp_fmtp_attr.patch                                          |   34
-158 files changed, 8161 insertions(+), 5521 deletions(-)</pre><br></html>
+159 files changed, 8162 insertions(+), 5522 deletions(-)</pre><br></html>
