@@ -1,3 +1,7 @@
+2018-05-01 20:12 +0000  Asterisk Development Team <asteriskteam@digium.com>
+
+	* asterisk 15.4.0 Released.
+
 2018-04-19 18:45 +0000  Asterisk Development Team <asteriskteam@digium.com>
 
 	* asterisk 15.4.0-rc1 Released.
